add time difference

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <button class="add-task-button" type="submit">Add</button>
     </form>
 
+    <div class="task-actions">
+      <a class="remove-logs" href="#">&#128465; Remove Logs</a>
+    </div>
+
     <div class="task-list"></div>
   </div>
 
