--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="./icon.png">
+
   <title>Focus</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
