--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <form class="add-task">
       <input class="add-task-input" type="text" placeholder="Task Name" required>
-      <button class="add-task-button" type="submit">Add</button>
+      <button class="add-task-button" type="submit">SAVE</button>
     </form>
 
     <div class="task-list"></div>
